[tool.poetry]
name = "random-recipes"
version = "0.0.7"
description = "Recipes to generate random instances of various types, beyond the scope of random."
license = "MIT"
authors = ["Ian Pearthree <52967928+ipear3@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/random-recipes/"
repository = "https://github.com/ipear3/random-recipes"
keywords = ["random"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
pytest = "^7.4.2"
coverage = "^7.3.1"
genbadge = {extras = ["coverage", "tests"], version = "^1.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
